# method

./: .env.example  .env.tpl  .fca-index.yaml  .gitignore  .mcp.json  .mcp.json.example  API_CONTRACT_REVIEW.md  ARCH_REVIEW_PRD020_PHASE2.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONSENSUS_VOTING_TALLY.md  FINDINGS_TO_INITIATIVES_MAPPING.csv  INTEGRATING.md  INTEGRATION_SYNTHESIS_FINAL.json  INTEGRATOR_SYNTHESIS_EXECUTIVE.md  LICENSE  NOTICE  PERFORMANCE_REVIEW_PRD020.md  PHASE_A_RECHECK_COMPLETE.txt  PRAGMATIC_SYNTHESIS_PHASE2.md  README.md  SECURITY_REVIEW_PRD020_INITIATIVES.json  bash.exe.stackdump  docker-compose.yml  package-lock.json  package.json  reliability-review-prd020.json  tsconfig.base.json  tsconfig.json  verify-changes.js
experiments/exp-slm/: .gitignore  DESIGN-SLM-COGNITIVE-CYCLE.md  Makefile  README.md  package.json  pyproject.toml  run-overnight.sh  tsconfig.json
experiments/exp-slm/phase-0-infra/results/: infra-report.json
experiments/exp-slm/phase-0-infra/scripts/: smoke-test-gpu.py  smoke-test-inference.ts  smoke-test-sft.py
experiments/exp-slm/phase-1-llm-monitor/__tests__/: llm-monitor.test.ts
experiments/exp-slm/phase-1-llm-monitor/results/: baseline-cost.json
experiments/exp-slm/phase-1-llm-monitor/scripts/: collect-traces.ts  measure-baseline.ts
experiments/exp-slm/phase-1-llm-monitor/src/: llm-monitor-prompt.ts  llm-monitor.ts  types.ts
experiments/exp-slm/phase-1-llm-monitor/traces/: monitor-v2-traces.jsonl
experiments/exp-slm/phase-5-cycle/: FINDINGS.md  run-slm-cycle.ts
experiments/exp-slm/shared/dsl-parser/: index.ts  (+1 more)
(+1353 files in other folders)
